Update analysis notebooks.

--- a/rm4mt_eval/analysis/analysis_cometkiwi.ipynb
+++ b/rm4mt_eval/analysis/analysis_cometkiwi.ipynb
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "dd699bdd",
    "metadata": {},
    "outputs": [],
@@ -440,6 +440,8 @@
     "\n",
     "    for idx, models in enumerate(model_groups):\n",
     "        ax = axes[idx]\n",
+    "        # 过滤掉不需要的模型\n",
+    "        models = [m for m in models if m not in {\"cogito-v1-preview-llama-3B\", \"cogito-v1-preview-llama-8B\"}]\n",
     "        group_df = df[\n",
     "            (df[\"task\"] == task)\n",
     "            & (df[\"metric\"] == metric)\n",
@@ -500,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "199eb8df",
    "metadata": {},
    "outputs": [
@@ -517,24 +519,25 @@
    ],
    "source": [
     "plot_models_groups_side_by_side(\n",
-    "    dfs_by_metric['comet_kiwi_score'],\n",
-    "    task='WMT23-Biomedical-Sentence',\n",
-    "    metric='comet_kiwi_score',\n",
-    "    lang_pair='Avg',\n",
+    "    dfs_by_metric[\"comet_kiwi_score\"],\n",
+    "    task=\"WMT23-Biomedical-Sentence\",\n",
+    "    metric=\"comet_kiwi_score\",\n",
+    "    lang_pair=\"Avg\",\n",
     "    model_groups=[\n",
-    "        ['Qwen3-0.6B', 'Qwen3-1.7B'],\n",
-    "        ['Qwen3-4B', 'Qwen3-8B'],\n",
-    "        ['Qwen3-14B', 'Qwen3-32B'],\n",
-    "        ['grok-3-mini'],\n",
+    "        [\"Qwen3-0.6B\", \"Qwen3-1.7B\"],\n",
+    "        [\"Qwen3-4B\", \"Qwen3-8B\"],\n",
+    "        [\"Qwen3-14B\", \"Qwen3-32B\"],\n",
+    "        [\"cogito-v1-preview-llama-3B\", \"cogito-v1-preview-llama-8B\"],\n",
+    "        [\"grok-3-mini\"],\n",
     "    ],\n",
     "    budget_ticks=[0, 100, 200, 300, 400, 500, 1000, 2000],\n",
-    "    figsize=(24, 5)\n",
+    "    figsize=(24, 5),\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "ca747c05",
    "metadata": {},
    "outputs": [
@@ -559,6 +562,7 @@
     "        ['Qwen3-0.6B', 'Qwen3-1.7B'],\n",
     "        ['Qwen3-4B', 'Qwen3-8B'],\n",
     "        ['Qwen3-14B', 'Qwen3-32B'],\n",
+    "        ['cogito-v1-preview-llama-3B', 'cogito-v1-preview-llama-8B'],\n",
     "        ['grok-3-mini'],\n",
     "    ],\n",
     "    budget_ticks=[0, 100, 200, 300, 400, 500, 1000, 2000],\n",
@@ -568,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "f16fe449",
    "metadata": {},
    "outputs": [
@@ -593,6 +597,7 @@
     "        ['Qwen3-0.6B', 'Qwen3-1.7B'],\n",
     "        ['Qwen3-4B', 'Qwen3-8B'],\n",
     "        ['Qwen3-14B', 'Qwen3-32B'],\n",
+    "        ['cogito-v1-preview-llama-3B', 'cogito-v1-preview-llama-8B'],\n",
     "        ['grok-3-mini'],\n",
     "    ],\n",
     "    budget_ticks=[0, 100, 200, 300, 400, 500, 1000, 2000],\n",
@@ -610,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "1ad2c657",
    "metadata": {},
    "outputs": [
@@ -635,6 +640,7 @@
     "        ['Qwen3-0.6B', 'Qwen3-1.7B'],\n",
     "        ['Qwen3-4B', 'Qwen3-8B'],\n",
     "        ['Qwen3-14B', 'Qwen3-32B'],\n",
+    "        ['cogito-v1-preview-llama-3B', 'cogito-v1-preview-llama-8B'],\n",
     "        ['grok-3-mini'],\n",
     "    ],\n",
     "    budget_ticks=[0, 100, 200, 300, 400, 500, 1000, 2000],\n",
@@ -652,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "6977b437",
    "metadata": {},
    "outputs": [
@@ -677,6 +683,7 @@
     "        ['Qwen3-0.6B', 'Qwen3-1.7B'],\n",
     "        ['Qwen3-4B', 'Qwen3-8B'],\n",
     "        ['Qwen3-14B', 'Qwen3-32B'],\n",
+    "        ['cogito-v1-preview-llama-3B', 'cogito-v1-preview-llama-8B'],\n",
     "        ['grok-3-mini'],\n",
     "    ],\n",
     "    budget_ticks=[0, 100, 200, 300, 400, 500, 1000, 2000],\n",
@@ -686,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "4129bc67",
    "metadata": {},
    "outputs": [
@@ -711,6 +718,7 @@
     "        ['Qwen3-0.6B', 'Qwen3-1.7B'],\n",
     "        ['Qwen3-4B', 'Qwen3-8B'],\n",
     "        ['Qwen3-14B', 'Qwen3-32B'],\n",
+    "        ['cogito-v1-preview-llama-3B', 'cogito-v1-preview-llama-8B'],\n",
     "        ['grok-3-mini'],\n",
     "    ],\n",
     "    budget_ticks=[0, 100, 200, 300, 400, 500, 1000, 2000],\n",
@@ -720,7 +728,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "2aab64ad",
    "metadata": {},
    "outputs": [
@@ -745,6 +753,7 @@
     "        ['Qwen3-0.6B', 'Qwen3-1.7B'],\n",
     "        ['Qwen3-4B', 'Qwen3-8B'],\n",
     "        ['Qwen3-14B', 'Qwen3-32B'],\n",
+    "        ['cogito-v1-preview-llama-3B', 'cogito-v1-preview-llama-8B'],\n",
     "        ['grok-3-mini'],\n",
     "    ],\n",
     "    budget_ticks=[0, 100, 200, 300, 400, 500, 1000, 2000],\n",
@@ -762,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "63c3728b",
    "metadata": {},
    "outputs": [
@@ -787,6 +796,7 @@
     "        ['Qwen3-0.6B', 'Qwen3-1.7B'],\n",
     "        ['Qwen3-4B', 'Qwen3-8B'],\n",
     "        ['Qwen3-14B', 'Qwen3-32B'],\n",
+    "        ['cogito-v1-preview-llama-3B', 'cogito-v1-preview-llama-8B'],\n",
     "        ['grok-3-mini'],\n",
     "    ],\n",
     "    budget_ticks=[0, 100, 200, 300, 400, 500, 1000, 2000],\n",
@@ -804,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "6d99effe",
    "metadata": {},
    "outputs": [
@@ -821,24 +831,26 @@
    ],
    "source": [
     "plot_models_groups_side_by_side(\n",
-    "    dfs_by_metric['comet_kiwi_score'],\n",
-    "    task='DRT-Gutenberg',\n",
-    "    metric='comet_kiwi_score',\n",
-    "    lang_pair='Avg',\n",
+    "    dfs_by_metric[\"comet_kiwi_score\"],\n",
+    "    task=\"DRT-Gutenberg\",\n",
+    "    metric=\"comet_kiwi_score\",\n",
+    "    lang_pair=\"Avg\",\n",
     "    model_groups=[\n",
-    "        ['Qwen3-0.6B', 'Qwen3-1.7B'],\n",
-    "        ['Qwen3-4B', 'Qwen3-8B'],\n",
-    "        ['Qwen3-14B', 'Qwen3-32B'],\n",
-    "        ['grok-3-mini'],\n",
+    "        [\"Qwen3-0.6B\", \"Qwen3-1.7B\"],\n",
+    "        [\"Qwen3-4B\", \"Qwen3-8B\"],\n",
+    "        [\"Qwen3-14B\", \"Qwen3-32B\"],\n",
+    "        [\"cogito-v1-preview-llama-3B\", \"cogito-v1-preview-llama-8B\"],\n",
+    "        [\"DRT-7B\", \"DRT-8B\", \"DRT-14B\"],\n",
+    "        [\"grok-3-mini\"],\n",
     "    ],\n",
     "    budget_ticks=[0, 100, 200, 300, 400, 500, 1000, 2000],\n",
-    "    figsize=(24, 5)\n",
+    "    figsize=(24, 5),\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "fc5adbe0",
    "metadata": {},
    "outputs": [
@@ -863,6 +875,7 @@
     "        ['Qwen3-0.6B', 'Qwen3-1.7B'],\n",
     "        ['Qwen3-4B', 'Qwen3-8B'],\n",
     "        ['Qwen3-14B', 'Qwen3-32B'],\n",
+    "        ['cogito-v1-preview-llama-3B', 'cogito-v1-preview-llama-8B'],\n",
     "        ['grok-3-mini'],\n",
     "    ],\n",
     "    budget_ticks=[0, 100, 200, 300, 400, 500, 1000, 2000],\n",
@@ -872,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "e51a31bf",
    "metadata": {},
    "outputs": [
@@ -897,6 +910,7 @@
     "        ['Qwen3-0.6B', 'Qwen3-1.7B'],\n",
     "        ['Qwen3-4B', 'Qwen3-8B'],\n",
     "        ['Qwen3-14B', 'Qwen3-32B'],\n",
+    "        ['cogito-v1-preview-llama-3B', 'cogito-v1-preview-llama-8B'],\n",
     "        ['grok-3-mini'],\n",
     "    ],\n",
     "    budget_ticks=[0, 100, 200, 300, 400, 500, 1000, 2000],\n",
@@ -928,6 +942,7 @@
     "        [\"Qwen3-0.6B\", \"Qwen3-1.7B\"],\n",
     "        [\"Qwen3-4B\", \"Qwen3-8B\"],\n",
     "        [\"Qwen3-14B\", \"Qwen3-32B\"],\n",
+    "        [\"cogito-v1-preview-llama-3B\", \"cogito-v1-preview-llama-8B\"],\n",
     "        [\"grok-3-mini\"],\n",
     "    ],\n",
     "    budget_ticks=[0, 100, 200, 300, 400, 500, 1000, 2000],\n",
